# Extension-Kit

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  add_agent.sh  docker-compose.yml  extension-kit.axs  fix_makefiles.sh
AD-BOF/: AD_beacon.json  CMakeLists.txt  Makefile  Makefile.backup  README.md  ad-services.axs  ad.axs
AD-BOF/ADCS-BOF/: ADCS.axs  Makefile  README.md
AD-BOF/DCSync-BOF/: .gitignore  DCSync.axs  Makefile  README.md
AD-BOF/DCSync-BOF/_include/: dcsync.h  ldap_common.h
AD-BOF/DCSync-BOF/drsuapi/: ms-drsr-custom.c  ms-drsr.h
AD-BOF/DCSync-BOF/src/: dcsync-all.c  dcsync-single.c
AD-BOF/DCSync-BOF/util/: ldap_common.c  ldap_syncall.c  rpc-adapter.c
AD-BOF/Kerbeus-BOF/: CMakeLists.txt  Makefile  Makefile.backup  README.md  kerbeus.axs
AD-BOF/Kerbeus-BOF/_include/: asn_decode.c  asn_encode.c  crypt_checksum.c  crypt_key.c  functions.c  kerb_struct.h
AD-BOF/Kerbeus-BOF/asktgs/: asktgs.c
AD-BOF/Kerbeus-BOF/asktgt/: asktgt.c
AD-BOF/Kerbeus-BOF/asreproasting/: asreproasting.c
AD-BOF/Kerbeus-BOF/changepw/: changepw.c
AD-BOF/Kerbeus-BOF/describe/: describe.c
AD-BOF/Kerbeus-BOF/hash/: hash.c
AD-BOF/Kerbeus-BOF/kerberoasting/: kerberoasting.c
AD-BOF/Kerbeus-BOF/purge/: purge.c
AD-BOF/Kerbeus-BOF/renew/: renew.c
AD-BOF/Kerbeus-BOF/s4u/: cross_s4u.c  s4u.c
AD-BOF/LDAP-BOF/: CMakeLists.txt  LDAP.axs  LICENSE  Makefile  README.md
AD-BOF/LDAP-BOF/_include/: acl_common.h  ldap_common.h
AD-BOF/RelayInformer/: Makefile  README.md  RelayInformer.axs
AD-BOF/SQL-BOF/: CMakeLists.txt  Makefile  README.md  SQL.axs
AD-BOF/WebDAVClient/: EnableWebDAVClient.c  StatusWebDAVClient.c
AD-BOF/adwssearch/: adws_parser.h  adws_search.c  beacon.h  bofdefs.h  nbfse.h  nmf.h  nns.h
AD-BOF/badtakeover/: BadTakeover.c
AD-BOF/ldapsearch/: ldapsearch.c
AD-BOF/readlaps/: readlaps.c
Creds-BOF/: CMakeLists.txt  Makefile  Makefile.backup  README.md  creds.axs  creds_beacon.json
Creds-BOF/UnderlayCopy/: README.md  entry.c  underlaycopy.h
Creds-BOF/UnderlayCopy-BOF/UnderlayCopyBOF/: entry.c
Creds-BOF/_include/: bofdefs.h
Creds-BOF/askcreds/: askcreds.c  askcreds.h
Creds-BOF/autologon/: autologon.c
Creds-BOF/cookie-monster/: Makefile  cookie-monster-bof.c  cookie-monster-bof.h  cookie-monster.axs  decrypt.py
Creds-BOF/credman/: credentialmanager.c
Creds-BOF/get-netntlm/: get-netntlm.c
Creds-BOF/hashdump/: beacon.h  bofdefs.h  hashdump.c  hive_parser.c
Creds-BOF/lsadump/: cache.c  lsadump_helper.c  sam.c  secrets.c
Creds-BOF/lsadump/include/: cache.h  sam.h  (+2 more)
Creds-BOF/nanodump/: Makefile  Makefile.original  README.md  nanodump.axs
Elevation-BOF/: CMakeLists.txt  Makefile  Makefile.backup  README.md  elevate.axs  elevation_beacon.json
Elevation-BOF/getsystem_token/: getsystem_token.c
Elevation-BOF/potato-dcom/: DCOMPotato.cpp  bofdefs.h
Elevation-BOF/printspoofer/: bofdefs.h  printspoofer.c
Elevation-BOF/uac_regshellcmd/: RegistryShellCommandBOF.c
Elevation-BOF/uac_sspi/: SspiUacBypassBOF.cpp
Execution-BOF/: CMakeLists.txt  Makefile  Makefile.backup  README.md  execution.axs  execution_beacon.json
Execution-BOF/No-Consolation/: Makefile.backup  README.md  no_consolation.axs
Execution-BOF/_include/: inlineExecute-Assembly.h
Execution-BOF/execute-assembly/: inlineExecute-Assembly.c  inlineExecute-Assembly.h
Injection-BOF/: CMakeLists.txt  Makefile  Makefile.backup  README.md  inject.axs  injection_beacon.json
Injection-BOF/inject_32to64/: README.md  inject_32to64.c
Injection-BOF/inject_cfg/: inject_cfg.c
Injection-BOF/inject_poolparty/: 1.h  2.h  3.h  4.h  5.h  6.h  7.h  8.h  EighthGuest.h  FifthGuest.h  FirstGuest.h  FourthGuest.h  PoolParty.h  SecondGuest.h  SeventhGuest.h  ThirdGuest.h  inject_poolparty.c
Injection-BOF/inject_sec/: inject_sec.c  libc.h
LateralMovement-BOF/: CMakeLists.txt  Makefile  README.md  lateral.axs  lateralmovement_beacon.json
LateralMovement-BOF/psexec/: psexec.c
LateralMovement-BOF/runas/: runas.c
LateralMovement-BOF/runas_sess_IHxExec/: bofdefs.h  ihxexec.c
LateralMovement-BOF/scshell/: README.md  scshell.c
LateralMovement-BOF/token_make/: token_make.c
LateralMovement-BOF/token_steal/: token_steal.c
LateralMovement-BOF/winrm-client/: beacon_user_data.h  winrm.cpp
Postex-BOF/: CMakeLists.txt  Makefile  Makefile.backup  README.md  postex.axs  postex_beacon.json
Postex-BOF/SauronEyeBOF/: entry.c  sauroneye.h
Postex-BOF/ScreenshotBOF/: entry.c
Postex-BOF/_include/: adaptix.h
Postex-BOF/firewallrule/: addfirewallrule.c  firewallrule.h
Process-BOF/: CMakeLists.txt  Makefile  README.md  process.axs  process_beacon.json
Process-BOF/findobjects/: FindModule.c
Process-BOF/process/: base.c  psc.c
Process-BOF/procfreeze/: procfreeze.c
SAL-BOF/: CMakeLists.txt  Makefile  Makefile.backup  README.md  SAL_beacon.json  sal.axs
SAL-BOF/_include/: base.c  bofdefs.h
SAL-BOF/arp/: arp.c
SAL-BOF/askcreds/: askcreds.c  askcreds.h
SAL-BOF/cacls/: cacls.c
SAL-BOF/dir/: base.c  dir.c
SAL-BOF/env/: env.c
SAL-BOF/findobjects/: FindProcHandle.c
SAL-BOF/ipconfig/: ipconfig.c
SAL-BOF/listdns/: listdns.c
SAL-BOF/netstat/: netstat.c
SAL-BOF/nslookup/: nslookup.c
SAL-BOF/portscan/: Makefile  README.md  cmd_smartscan.axs  config.json  install_axs.sh  portscan.c  portscan.h  portscan_simple.c
SAL-BOF/privcheck/: alwaysinstallelevated.c  autologon.c  credentialmanager.c  download_vulnerable_driver_list.py  hijackablepath.c  modifiableautorun.c  modifiablesvc.c  privcheck_all.c  pshistory.c  tokenprivileges.c  uacstatus.c  unattendfiles.c  unquotedsvcpath.c  vulnerabledrivers.c
SAL-BOF/routeprint/: routeprint.c
SAL-BOF/routerprint/: routerprint.c
SAL-BOF/uptime/: uptime.c
SAL-BOF/useridletime/: useridletime.c
SAL-BOF/whoami/: whoami.c
SAR-BOF/: CMakeLists.txt  Makefile  Makefile.backup  README.md  SAR_beacon.json  sar.axs
SAR-BOF/_include/: bofdefs.h
SAR-BOF/ldapsearch/: ldapsearch.c
SAR-BOF/nbtscan/: nbtscan.c  nbtscan.h
SAR-BOF/quser/: base.c  quser.c
SAR-BOF/smartscan/: portscan_simple.c
SAR-BOF/taskhound/: taskhound.c
(+134 files in other folders)
